Fixed: missing a from api

--- a/apps/staging/linkding/kustomization.yaml
+++ b/apps/staging/linkding/kustomization.yaml
@@ -1,4 +1,4 @@
-piVersion: kustomize.configs.k8s.io/v1beta1
+apiVersion: kustomize.configs.k8s.io/v1beta1
 kind: Kustomization
 namespace: linkding
 resources: 
