--- a/apps/staging/linkding/kustomization.yaml
+++ b/apps/staging/linkding/kustomization.yaml
@@ -1,5 +1,5 @@
-apiVersion: kustomize.configs.k8s.io/v1beta1
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: linkding
-resources: 
+resources:
   - ../../base/linkding
