--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -23,6 +23,12 @@ spec:
           ports:
             - containerPort: 9090
 
+          envForm:
+            #- configMapRef:
+            #    name: linkding-configmap
+            - secretRef:
+                name: linkding-container-env
+
           securityContext:
             allowPrivilegeEscalation: false
 
