Fixed: Misspelled word.

--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -23,7 +23,7 @@ spec:
           ports:
             - containerPort: 9090
 
-          envForm:
+          envFrom:
             #- configMapRef:
             #    name: linkding-configmap
             - secretRef:
