Fix: Corrected the secret name

--- a/apps/staging/audiobookshelf/audiobookshelf-container-env-secret.yaml
+++ b/apps/staging/audiobookshelf/audiobookshelf-container-env-secret.yaml
@@ -5,7 +5,7 @@ data:
 kind: Secret
 metadata:
     creationTimestamp: null
-    name: linkding-container-env
+    name: audiobookshelf-container-env
 sops:
     kms: []
     gcp_kms: []
