Fix: Changed PVCs size to min 5Gi and removed NextJS PVC.

--- a/apps/base/nextjs-on-docker/deployment.yaml
+++ b/apps/base/nextjs-on-docker/deployment.yaml
@@ -32,12 +32,12 @@ spec:
           securityContext:
             allowPrivilegeEscalation: false
 
-          volumeMounts:
-            # Don't need it as I don't save files.
-            - name: nextjs-on-docker-app
-              mountPath: /appNOTUSED
+          # volumeMounts:
+          #   # Don't need it as I don't save files.
+          #   - name: nextjs-on-docker-app
+          #     mountPath: /appNOTUSED
 
-      volumes:
-        - name: nextjs-on-docker-app
-          persistentVolumeClaim:
-            claimName: nextjs-on-docker-app-pvc
+      # volumes:
+      #   - name: nextjs-on-docker-app
+      #     persistentVolumeClaim:
+      #       claimName: nextjs-on-docker-app-pvc
