--- a/apps/base/audiobookshelf/storage.yaml
+++ b/apps/base/audiobookshelf/storage.yaml
@@ -7,8 +7,8 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 128Mi
-
+      storage: 5Gi
+  storageClassName: sata
 
 ---
 apiVersion: v1
@@ -20,8 +20,8 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 128Mi
-
+      storage: 5Gi
+  storageClassName: sata
 
 ---
 apiVersion: v1
@@ -33,8 +33,8 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 128Mi
-
+      storage: 5Gi
+  storageClassName: sata
 
 ---
 apiVersion: v1
@@ -46,8 +46,5 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 128Mi
-
-
-
-
+      storage: 5Gi
+  storageClassName: sata
