FIX: Added N8N_RUNNERS_ENABLED

--- a/apps/staging/n8n/cloudflare.yaml
+++ b/apps/staging/n8n/cloudflare.yaml
@@ -51,7 +51,7 @@ spec:
       # Create a config.yaml file from the ConfigMap below.
       - name: config
         configMap:
-          name: cloudflared
+          name: n8n-cloudflared
           items:
           - key: config.yaml
             path: config.yaml
