Feat: Added N8n with Postgresql

--- a/apps/base/n8n/deployment.yaml
+++ b/apps/base/n8n/deployment.yaml
@@ -28,7 +28,7 @@ spec:
             - configMapRef:
                 name: n8n-configmap
             - secretRef:
-                name: n8n-container-env
+                name: postgresql-secret
 
           securityContext:
             allowPrivilegeEscalation: false
