--- a/apps/base/n8n/storage.yaml
+++ b/apps/base/n8n/storage.yaml
@@ -9,3 +9,16 @@ spec:
     requests:
       storage: 5Gi
   storageClassName: sata
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgresql-data-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+  storageClassName: sata
