--- a/apps/staging/n8n/configmap.yaml
+++ b/apps/staging/n8n/configmap.yaml
@@ -6,3 +6,8 @@ data:
   N8N_PORT: "5678"
   N8N_PROTOCOL: "http"
   N8N_RUNNERS_ENABLED: "true"
+  GENERIC_TIMEZONE: ""
+  N8N_HOST: "n8n-stg.alexandrud.com"
+  NODE_ENV: production
+  WEBHOOK_URL: "https://n8n-stg.alexandrud.com/"
+  N8N_RUNNERS_ENABLED: "true"
