--- a/apps/base/n8n-postgres/deployment.yaml
+++ b/apps/base/n8n-postgres/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: n8n
+  name: n8n-postgres
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: n8n
+      app: n8n-postgres
   template:
     metadata:
       labels:
-        app: n8n
+        app: n8n-postgres
     spec:
       securityContext:
         fsGroup: 1000 # node group ID
@@ -27,8 +27,8 @@ spec:
           envFrom:
             - configMapRef:
                 name: n8n-configmap
-            # - secretRef:
-            #     name: postgresql-secret
+            - secretRef:
+                name: postgresql-secret
 
           securityContext:
             allowPrivilegeEscalation: false
