--- a/apps/staging/n8n-postgres/kustomization.yaml
+++ b/apps/staging/n8n-postgres/kustomization.yaml
@@ -2,8 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: n8n
 resources:
-  - ../../base/n8n/
+  - ../../base/n8n-postgres/
   - cloudflare.yaml
+  - n8n-container-env-secret.yaml
   - cf-tunnel-stg-n8n.yaml
   - ingress.yaml
   - configmap.yaml
+  - postgresql-secret.yaml
