--- a/apps/staging/n8n-postgres/kustomization.yaml
+++ b/apps/staging/n8n-postgres/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: n8n
+namespace: n8n-postgres
 resources:
   - ../../base/n8n-postgres/
   - cloudflare.yaml
