--- a/apps/base/n8n-postgres/deployment.yaml
+++ b/apps/base/n8n-postgres/deployment.yaml
@@ -30,6 +30,13 @@ spec:
             - secretRef:
                 name: postgresql-secret
 
+          env:
+            - name: DB_POSTGRESDB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgresql-secret
+                  key: password
+
           securityContext:
             allowPrivilegeEscalation: false
 
