--- a/apps/staging/n8n-postgres/cloudflare.yaml
+++ b/apps/staging/n8n-postgres/cloudflare.yaml
@@ -78,7 +78,7 @@ data:
 
     ingress:
     - hostname: n8n-postgres-stg.alexandrud.com
-      service: http://n8n-postgres:5678
+      service: http://n8n-postgresql:5678
 
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
