--- a/apps/staging/n8n-postgres/ingress.yaml
+++ b/apps/staging/n8n-postgres/ingress.yaml
@@ -10,7 +10,7 @@ spec:
         paths:
           - backend:
               service:
-                name: n8n-postgresql
+                name: n8n-postgre
                 port:
                   number: 5680
             path: /
