--- a/apps/base/n8n-postgres/service.yaml
+++ b/apps/base/n8n-postgres/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: n8n-postgresql
+  name: n8n-postgres
 spec:
   ports:
     - port: 5680 # The port exposed by the Service
       targetPort: 5680 # The port inside the container
   selector:
-    app: n8n-postgresql
+    app: n8n-postgres
   type: ClusterIP
