--- a/apps/base/homepage/config-secret.yaml
+++ b/apps/base/homepage/config-secret.yaml
@@ -33,14 +33,14 @@ spec:
 
         services.yaml: |
           - Homelab:
-            - Pi-hole:
-                  href: "http://192.168.120.10:3009/admin"
-                  icon: pi-hole.png
-                  widget:
-                      type: pihole
-                      url: "http://192.168.120.10:3009"
-                      # version: 6 # required if running v6 or higher, defaults to 5
-                      key: {{ .piholekey }}
+            # - Pi-hole:
+            #       href: "http://192.168.120.10:3009/admin"
+            #       icon: pi-hole.png
+            #       widget:
+            #           type: pihole
+            #           url: "http://192.168.120.10:3009"
+            #           # version: 6 # required if running v6 or higher, defaults to 5
+            #           key: {{ .piholekey }}
             - Pgadmin:
                   href: https://pgadmin.mischavandenburg.net
                   icon: pgadmin.png
