--- a/apps/base/homepage/kustomization.yaml
+++ b/apps/base/homepage/kustomization.yaml
@@ -6,10 +6,10 @@ resources:
   - secret.yaml
   - serviceaccount.yaml
   - service.yaml
-  - ingress.yaml
   - configmap-env.yaml
-  - config-secret.yaml
+  #- config-secret.yaml
   - deployment.yaml
   - clusterrole.yaml
+  - storage.yaml
 
   # The configmap for the dashboard is deployed from a private repo becuase I want to keep certain bookmarks private.
