--- a/apps/staging/n8n-postgres/cloudflare.yaml
+++ b/apps/staging/n8n-postgres/cloudflare.yaml
@@ -46,7 +46,7 @@ spec:
       volumes:
         - name: creds
           secret:
-            secretName: cf-tunnel-stg-n8n-postgres
+            secretName: cf-tunnel-n8n-adstage
 
         # Create a config.yaml file from the ConfigMap below.
         - name: config
@@ -68,7 +68,7 @@ data:
   config.yaml: |
     # Name of the tunnel you want to run
 
-    tunnel: tunnel-stage-n8n-postgres
+    tunnel: tunnel-n8n-adstage
 
     credentials-file: /etc/cloudflared/creds/credentials.json
 
@@ -77,7 +77,7 @@ data:
     no-autoupdate: true
 
     ingress:
-    - hostname: n8n-postgres-stg.alexandrud.com
+    - hostname: n8n-adstage.alexandrud.com
       service: http://n8n-postgres:5680
 
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
