--- a/apps/staging/nextjs-on-docker/cloudflare.yaml
+++ b/apps/staging/nextjs-on-docker/cloudflare.yaml
@@ -77,8 +77,8 @@ data:
     no-autoupdate: true
 
     ingress:
-    - hostname: n8n.alexandrud.com
-      service: http://n8n-postgres:5680
+    - hostname: nextjs-on-docker.alexandrud.com
+      service: http://nextjs-on-docker:3006
 
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
