--- a/apps/staging/nextjs-on-docker/cloudflare.yaml
+++ b/apps/staging/nextjs-on-docker/cloudflare.yaml
@@ -77,7 +77,7 @@ data:
     no-autoupdate: true
 
     ingress:
-    - hostname: nextjs-on-docker.alexandrud.com
+    - hostname: nextjs-on-docker-adstage.alexandrud.com
       service: http://nextjs-on-docker:3006
 
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
