--- a/apps/base/audiobookshelf/storage.yaml
+++ b/apps/base/audiobookshelf/storage.yaml
@@ -8,7 +8,7 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: sata
+  #storageClassName: sata # Used for spot.rackspace.com
 
 ---
 apiVersion: v1
@@ -21,7 +21,7 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: sata
+  #storageClassName: sata # Used for spot.rackspace.com
 
 ---
 apiVersion: v1
@@ -34,7 +34,7 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: sata
+  #storageClassName: sata # Used for spot.rackspace.com
 
 ---
 apiVersion: v1
@@ -47,4 +47,4 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: sata
+  #storageClassName: sata # Used for spot.rackspace.com
