--- a/apps/base/homepage/storage.yaml
+++ b/apps/base/homepage/storage.yaml
@@ -8,4 +8,4 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: sata
+  #storageClassName: sata # Used for spot.rackspace.com
