--- a/apps/base/n8n-postgres/storage.yaml
+++ b/apps/base/n8n-postgres/storage.yaml
@@ -8,7 +8,7 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: sata
+  #storageClassName: sata # Used for spot.rackspace.com
 
 ---
 apiVersion: v1
@@ -21,4 +21,4 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: sata
+  #storageClassName: sata # Used for spot.rackspace.com
