--- a/apps/staging/linkding/cloudflare.yaml
+++ b/apps/staging/linkding/cloudflare.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: cloudflared
-  replicas: 2 # You could also consider elastic scaling for this deployment
+  replicas: 1 # You could also consider elastic scaling for this deployment
   template:
     metadata:
       labels:
@@ -46,7 +46,7 @@ spec:
       volumes:
       - name: creds
         secret:
-          secretName: cf-tunnel-k3s-sops
+          secretName: cf-tunnel-linkding-adstage
 
       # Create a config.yaml file from the ConfigMap below.
       - name: config
@@ -68,7 +68,7 @@ data:
   config.yaml: |
     # Name of the tunnel you want to run
     
-    tunnel: tunnel-dragos-k3s
+    tunnel: linkding-adstage
 
     credentials-file: /etc/cloudflared/creds/credentials.json
 
@@ -77,7 +77,7 @@ data:
     no-autoupdate: true
 
     ingress:
-    - hostname: ldk3s.alexandrud.com
+    - hostname: linkding-adstage.alexandrud.com
       service: http://linkding:9090
 
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
