--- a/apps/base/n8n/deployment.yaml
+++ b/apps/base/n8n/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: n8n
+  name: n8n-postgres
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: n8n
+      app: n8n-postgres
   template:
     metadata:
       labels:
-        app: n8n
+        app: n8n-postgres
     spec:
       securityContext:
         fsGroup: 1000 # node group ID
@@ -20,15 +20,19 @@ spec:
       containers:
         - name: n8n
           image: docker.n8n.io/n8nio/n8n:1.90.2
-          ports:
-            - containerPort: 5678
-              protocol: TCP
 
           envFrom:
             - configMapRef:
                 name: n8n-configmap
-            # - secretRef:
-            #     name: postgresql-secret
+            - secretRef:
+                name: postgresql-secret
+
+          env:
+            - name: DB_POSTGRESDB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgresql-secret
+                  key: password
 
           securityContext:
             allowPrivilegeEscalation: false
@@ -40,4 +44,4 @@ spec:
       volumes:
         - name: n8n-data
           persistentVolumeClaim:
-            claimName: n8n-data-pvc
+            claimName: n8n-postgres-data-pvc
