--- a/apps/base/n8n/storage.yaml
+++ b/apps/base/n8n/storage.yaml
@@ -1,7 +1,20 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: n8n-data-pvc
+  name: n8n-postgres-data-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+  #storageClassName: sata # Used for spot.rackspace.com
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgresql-data-pvc
 spec:
   accessModes:
     - ReadWriteOnce
