--- a/apps/staging/n8n/cloudflare.yaml
+++ b/apps/staging/n8n/cloudflare.yaml
@@ -13,48 +13,48 @@ spec:
         app: cloudflared
     spec:
       containers:
-      - name: cloudflared
-        image: cloudflare/cloudflared:latest
-        args:
-        - tunnel
+        - name: cloudflared
+          image: cloudflare/cloudflared:latest
+          args:
+            - tunnel
 
-        # Points cloudflared to the config file, which configures what
-        # cloudflared will actually do. This file is created by a ConfigMap
-        # below.
-        - --config
-        - /etc/cloudflared/config/config.yaml
-        - run
-        livenessProbe:
-          httpGet:
-            # Cloudflared has a /ready endpoint which returns 200 if and only if
-            # it has an active connection to the edge.
-            path: /ready
-            port: 2000
-          failureThreshold: 1
-          initialDelaySeconds: 10
-          periodSeconds: 10
-        volumeMounts:
-        - name: config
-          mountPath: /etc/cloudflared/config
-          readOnly: true
-        # Each tunnel has an associated "credentials file" which authorizes machines
-        # to run the tunnel. cloudflared will read this file from its local filesystem,
-        # and it'll be stored in a k8s secret.
-        - name: creds
-          mountPath: /etc/cloudflared/creds
-          readOnly: true
+            # Points cloudflared to the config file, which configures what
+            # cloudflared will actually do. This file is created by a ConfigMap
+            # below.
+            - --config
+            - /etc/cloudflared/config/config.yaml
+            - run
+          livenessProbe:
+            httpGet:
+              # Cloudflared has a /ready endpoint which returns 200 if and only if
+              # it has an active connection to the edge.
+              path: /ready
+              port: 2000
+            failureThreshold: 1
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          volumeMounts:
+            - name: config
+              mountPath: /etc/cloudflared/config
+              readOnly: true
+            # Each tunnel has an associated "credentials file" which authorizes machines
+            # to run the tunnel. cloudflared will read this file from its local filesystem,
+            # and it'll be stored in a k8s secret.
+            - name: creds
+              mountPath: /etc/cloudflared/creds
+              readOnly: true
       volumes:
-      - name: creds
-        secret:
-          secretName: cf-tunnel-stg-n8n
+        - name: creds
+          secret:
+            secretName: cf-tunnel-n8n-adstage.yaml
 
-      # Create a config.yaml file from the ConfigMap below.
-      - name: config
-        configMap:
-          name: n8n-cloudflared
-          items:
-          - key: config.yaml
-            path: config.yaml
+        # Create a config.yaml file from the ConfigMap below.
+        - name: config
+          configMap:
+            name: n8n-postgres-cloudflared
+            items:
+              - key: config.yaml
+                path: config.yaml
 ---
 # This ConfigMap is just a way to define the cloudflared config.yaml file in k8s.
 # It's useful to define it in k8s, rather than as a stand-alone .yaml file, because
@@ -63,12 +63,12 @@ spec:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: n8n-cloudflared
+  name: n8n-postgres-cloudflared
 data:
   config.yaml: |
     # Name of the tunnel you want to run
-    
-    tunnel: tunnel-stage-n8n
+
+    tunnel: tunnel-n8n-adstage
 
     credentials-file: /etc/cloudflared/creds/credentials.json
 
@@ -77,8 +77,8 @@ data:
     no-autoupdate: true
 
     ingress:
-    - hostname: n8n-stg.alexandrud.com
-      service: http://n8n:5678
+    - hostname: n8n-adstage.alexandrud.com
+      service: http://n8n-postgres:5680
 
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
@@ -87,4 +87,3 @@ data:
       service: hello_world
     # This rule matches any traffic which didn't match a previous rule, and responds with HTTP 404.
     - service: http_status:404
-
