--- a/apps/staging/n8n/kustomization.yaml
+++ b/apps/staging/n8n/kustomization.yaml
@@ -1,9 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: n8n
+namespace: n8n-postgres
 resources:
-  - ../../base/n8n/
+  - ../../base/n8n-postgres/
   - cloudflare.yaml
-  - cf-tunnel-stg-n8n.yaml
+  - n8n-container-env-secret.yaml
+  - cf-tunnel-n8n-adstage.yaml
   - ingress.yaml
   - configmap.yaml
+  - postgresql-secret.yaml
