--- a/apps/staging/n8n/configmap.yaml
+++ b/apps/staging/n8n/configmap.yaml
@@ -17,9 +17,9 @@ data:
   DB_POSTGRESDB_USER: n8n
   DB_TYPE: postgresdb
   GENERIC_TIMEZONE: ""
-  N8N_HOST: "n8n-postgres-stg.alexandrud.com"
+  N8N_HOST: "n8n-adstage.alexandrud.com"
   N8N_PORT: "5678"
   N8N_PROTOCOL: "http"
   NODE_ENV: production
-  WEBHOOK_URL: "https://n8n-postgres-stg.alexandrud.com/"
+  WEBHOOK_URL: "https://n8n-adstage.alexandrud.com/"
   N8N_RUNNERS_ENABLED: "true"
