--- a/apps/base/homepage/configmap-env.yaml
+++ b/apps/base/homepage/configmap-env.yaml
@@ -3,4 +3,4 @@ kind: ConfigMap
 metadata:
   name: homepage-env-configmap
 data:
-  HOMEPAGE_ALLOWED_HOSTS: "homepage-adstage.alexandrud.com"
+  HOMEPAGE_ALLOWED_HOSTS: "homepage-adstage.alexandrud.com:3000"
