--- a/apps/base/homepage/kustomization.yaml
+++ b/apps/base/homepage/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 namespace: homepage
 resources:
   - namespace.yaml
-  - secret.yaml
+  #- secret.yaml
   - serviceaccount.yaml
   - service.yaml
   - configmap-env.yaml
