Revert "Deleted passwordKye from release"
This reverts commit caa043fb27bb402c9ade0086455efa6812cbfbf0.

--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -32,6 +32,7 @@ spec:
     grafana:
       admin:
         existingSecret: grafana-admin-secret
+        passwordKey: adminPassword
       ingress:
         ## If true, Grafana Ingress will be created
         ##
