--- a/apps/staging/homepage/kustomization.yaml
+++ b/apps/staging/homepage/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/homepage/
-  - ingress
+  - ingress.yaml
   - cloudflare.yaml
   - cf-tunnel-homepage-adstage.yaml
