--- a/infrastructure/daemonsets/base/crictl-prune-daemonset/crictl-prune-daemonset.yaml
+++ b/infrastructure/daemonsets/base/crictl-prune-daemonset/crictl-prune-daemonset.yaml
@@ -23,6 +23,10 @@ spec:
             - -c
             - |
               apk add --no-cache cri-tools
+              echo 'runtime-endpoint: unix:///run/k3s/containerd/containerd.sock
+              image-endpoint: unix:///run/k3s/containerd/containerd.sock
+              timeout: 10
+              debug: true' > /etc/crictl.yaml
               while true; do
                 echo "Running crictl rmi --prune at $(date)"
                 crictl rmi --prune || echo "Prune failed at $(date)" >&2
@@ -35,6 +39,8 @@ spec:
               mountPath: /var/lib
             - name: run-containerd
               mountPath: /run/containerd
+            - name: containerd-sock
+              mountPath: /run/k3s/containerd/containerd.sock
       restartPolicy: Always
       volumes:
         - name: var-lib
@@ -43,3 +49,8 @@ spec:
         - name: run-containerd
           hostPath:
             path: /run/containerd
+        # Added containerd-sock for k3s
+        - name: containerd-sock
+          hostPath:
+            path: /run/k3s/containerd/containerd.sock
+            type: Socket
