--- a/apps/base/commafeed/postgresql-deployment.yaml
+++ b/apps/base/commafeed/postgresql-deployment.yaml
@@ -35,7 +35,7 @@ spec:
 
           ports:
             - containerPort: 5432
-              name: postgresql-commafeed
+              name: psql-commafeed
 
           volumeMounts:
             - name: postgresql-commafeed-data
