--- a/apps/base/commafeed/kustomization.yaml
+++ b/apps/base/commafeed/kustomization.yaml
@@ -1,8 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
   - deployment.yaml
-  - service.yaml
+  - namespace.yaml
   - postgresql-deployment.yaml
   - postgresql-service.yaml
+  - service.yaml
+  - storage.yaml
