--- a/apps/staging/commafeed/configmap.yaml
+++ b/apps/staging/commafeed/configmap.yaml
@@ -3,6 +3,6 @@ kind: ConfigMap
 metadata:
   name: commafeed-configmap
 data:
-  QUARKUS_DATASOURCE_JDBC_URL: psql-commafeed
+  QUARKUS_DATASOURCE_JDBC_URL: "jdbc:postgresql://psql-commafeed:5432/commafeed"
   QUARKUS_DATASOURCE_USERNAME: "commafeed"
   QUARKUS_DATASOURCE_PASSWORD: "commafeed"
