--- a/apps/base/commafeed/postgresql-service.yaml
+++ b/apps/base/commafeed/postgresql-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: psql-commafeed
+  name: postgresql
 spec:
   ports:
     - port: 5432
       targetPort: 5432
   selector:
-    app: psql-commafeed
+    app: postgresql
