--- a/apps/base/commafeed/storage.yaml
+++ b/apps/base/commafeed/storage.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgresql-commafeed-data-pvc
+  name: postgresql-data-pvc
 spec:
   accessModes:
     - ReadWriteOnce
