--- a/apps/base/homepage/deployment.yaml
+++ b/apps/base/homepage/deployment.yaml
@@ -48,7 +48,7 @@ spec:
           volumeMounts:
             - name: config-volume
               mountPath: /app/config
-              readOnly: true
+              readOnly: false
             # - name: homepage-config
             #   mountPath: /app/config
           #   - mountPath: /app/config/custom.js
