--- a/apps/base/n8n/postgresql-deployment.yaml
+++ b/apps/base/n8n/postgresql-deployment.yaml
@@ -23,7 +23,7 @@ spec:
             - name: POSTGRES_DB
               value: n8n
             - name: PGDATA
-              value: /var/lib/postgresql/data/
+              value: /var/lib/postgresql
             - name: POSTGRES_USER
               value: n8n
             - name: POSTGRES_PASSWORD
@@ -38,7 +38,7 @@ spec:
 
           volumeMounts:
             - name: postgresql-data
-              mountPath: /var/lib/postgresql/data
+              mountPath: /var/lib/postgresql
 
           securityContext:
             allowPrivilegeEscalation: false
