--- a/apps/base/n8n/postgresql-deployment.yaml
+++ b/apps/base/n8n/postgresql-deployment.yaml
@@ -23,7 +23,7 @@ spec:
             - name: POSTGRES_DB
               value: n8n
             - name: PGDATA
-              value: /var/lib/postgresql
+              value: /var/lib/postgresql/postgres18
             - name: POSTGRES_USER
               value: n8n
             - name: POSTGRES_PASSWORD
