--- a/apps/base/n8n/service.yaml
+++ b/apps/base/n8n/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: n8n-postgres
+  name: n8n
 spec:
   ports:
     - port: 5680 # The port exposed by the Service
       targetPort: 5678 # The port inside the container
   selector:
-    app: n8n-postgres
+    app: n8n
   type: ClusterIP
