--- a/apps/staging/n8n/cloudflare.yaml
+++ b/apps/staging/n8n/cloudflare.yaml
@@ -78,7 +78,7 @@ data:
 
     ingress:
     - hostname: n8n-adstage.alexandrud.com
-      service: http://n8n-postgres:5680
+      service: http://n8n:5680
 
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
