--- a/apps/base/n8n/storage.yaml
+++ b/apps/base/n8n/storage.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: n8n-postgres-data-pvc
+  name: n8n-data-pvc
 spec:
   accessModes:
     - ReadWriteOnce
