--- a/apps/staging/wallabag/cloudflare.yaml
+++ b/apps/staging/wallabag/cloudflare.yaml
@@ -46,12 +46,12 @@ spec:
       volumes:
         - name: creds
           secret:
-            secretName: cf-tunnel-n8n-adstage
+            secretName: cf-tunnel-wallabag-adstage
 
         # Create a config.yaml file from the ConfigMap below.
         - name: config
           configMap:
-            name: n8n-postgres-cloudflared
+            name: wallabag-cloudflared
             items:
               - key: config.yaml
                 path: config.yaml
@@ -63,12 +63,12 @@ spec:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: n8n-cloudflared
+  name: wallabag-cloudflared
 data:
   config.yaml: |
     # Name of the tunnel you want to run
 
-    tunnel: tunnel-n8n-adstage
+    tunnel: tunnel-wallabag-adstage
 
     credentials-file: /etc/cloudflared/creds/credentials.json
 
@@ -77,8 +77,8 @@ data:
     no-autoupdate: true
 
     ingress:
-    - hostname: n8n-adstage.alexandrud.com
-      service: http://n8n:5680
+    - hostname: wallabag-adstage.alexandrud.com
+      service: http://wallabag:80
 
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
