--- a/apps/staging/wallabag/wallabag-container-env-secret.yaml
+++ b/apps/staging/wallabag/wallabag-container-env-secret.yaml
@@ -4,7 +4,7 @@ data:
   LD_SUPERUSER_PASSWORD: ENC[AES256_GCM,data:gzXHa4cDcuhlBO0ARNZf0FblDocctqubmjx+og==,iv:6qLbXknbi61JHWyWUdhgV3m7Av1nxgDaDetZuRk271s=,tag:dx5fi/0d+dziPF8dOd5zdQ==,type:str]
 kind: Secret
 metadata:
-  creationTimestamp: null
+  creationTimestamp: "2025-10-01T00:00:00Z"
   name: wallabag-container-env
 sops:
   kms: []
