Running again as root

--- a/apps/base/wallabag/deployment.yaml
+++ b/apps/base/wallabag/deployment.yaml
@@ -38,8 +38,8 @@ spec:
                   key: password
 
           securityContext:
-            runAsUser: 65534 # UID for nobody
-            runAsGroup: 65534 # GID for nobody
+            # runAsUser: 65534 # UID for nobody
+            # runAsGroup: 65534 # GID for nobody
             allowPrivilegeEscalation: false
 
           volumeMounts:
