--- a/apps/staging/wallabag/configmap.yaml
+++ b/apps/staging/wallabag/configmap.yaml
@@ -10,3 +10,4 @@ data:
   SYMFONY__ENV__DATABASE_NAME: wallabag
   SYMFONY__ENV__DATABASE_USER: wallabag
   SYMFONY__ENV__DOMAIN_NAME: "https://wallabag-adstage.alexandrud.com"
+  POPULATE_DATABASE: "False"
