--- a/monitoring/configs/staging/kube-prometheus-stack/kustomization.yaml
+++ b/monitoring/configs/staging/kube-prometheus-stack/kustomization.yaml
@@ -4,4 +4,4 @@ resources:
   - grafana-tls-secret.yaml
   - cloudflare.yaml
   - cf-tunnel-grafana-adstage.yaml
-  - dashboards.yaml
+ # - dashboards.yaml
